--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,12 @@
                     <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
                 </svg></div>
         </div>
+        <button id="friendsBtnLobby" class="secondary-btn icon-btn" data-i18n="friends_button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="18" height="18" style="vertical-align: middle;">
+                <path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/>
+            </svg>
+            <span data-i18n="friends_button_text">Друзі</span>
+        </button>
         <hr>
         <h3 data-i18n="lobby_players_title">Гравці в кімнаті:</h3>
         <ul id="player-list"></ul>
@@ -291,6 +297,17 @@
                     <ul id="search-results-list" class="user-list"></ul>
                     <p id="search-message" class="info-message"></p>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="game-invite-toast" class="modal-overlay" style="display: none;">
+        <div class="modal-content invite-modal">
+            <h3 id="invite-title">Запрошення в гру</h3>
+            <p id="invite-text">Гравець <strong>PlayerName</strong> запрошує вас приєднатися до гри!</p>
+            <div class="invite-actions">
+                <button id="accept-invite-btn" class="primary">Прийняти</button>
+                <button id="decline-invite-btn" class="secondary">Відхилити</button>
             </div>
         </div>
     </div>
